--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,160 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  background-image: url("https://i.ibb.co/3yFnGJj/coffee-625x300-1528804048854.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  min-height: 100vh;
+  font-family: "Nunito", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  color: var(--text-color);
+  text-decoration: none;
+}
+
+/* <nav> */
+.navbar {
+  height: 60px;
+  background-color: #6c4c35;
+  padding: 0 1rem;
+  border-bottom: 1px solid #474a4d;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  font-size: 1.5rem;
+  color: #e5d9ca;
+  font-weight: bold;
+}
+/* <ul> */
+.navbar-end {
+  max-width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+/* <li> */
+.nav-item {
+  width: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+.nav-item span {
+  font-size: 1rem;
+  color: #d4bba7;
+  font-weight: bold;
+}
+
+/* Icon Button */
+.icon-button {
+  width: 30px;
+  height: 30px;
+  color: black;
+  background-color: #d4bba7;
+  border-radius: 50%;
+  padding: 5px;
+  margin: 2px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: filter 500ms;
+}
+
+.icon-button:hover {
+  filter: brightness(1.2);
+}
+
+.icon-button svg {
+  fill: black;
+  width: 25px;
+  height: 25px;
+}
+
+/* Dropdown Menu */
+.dropdown {
+  position: absolute;
+  top: 58px;
+  width: 230px;
+  transform: translateX(-45%);
+  background-color: #6c4c35;
+  border: 1px solid #474a4d;
+  border-radius: 5px;
+  padding: 1rem;
+  overflow: hidden;
+  transition: height 500ms ease;
+}
+
+.menu {
+  width: 100%;
+}
+
+.menu-item {
+  height: 50px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+  transition: background 500ms;
+  padding: 0.5rem;
+  cursor: pointer;
+  color: #e5d9ca;
+}
+
+.menu-item .icon-button {
+  margin-right: 0.5rem;
+}
+
+.menu-item .icon-button:hover {
+  filter: none;
+}
+
+.menu-item:hover {
+  background-color: #e5d9ca;
+}
+
+.icon-right {
+  margin-left: auto;
+}
+
+/* CSSTransition classes  */
+.menu-primary-enter {
+  position: absolute;
+  transform: translateX(-110%);
+}
+.menu-primary-enter-active {
+  transform: translateX(0%);
+  transition: all 500ms ease;
+}
+.menu-primary-exit {
+  position: absolute;
+}
+.menu-primary-exit-active {
+  transform: translateX(-110%);
+  transition: all 500ms ease;
+}
+
+.menu-secondary-enter {
+  transform: translateX(110%);
+}
+.menu-secondary-enter-active {
+  transform: translateX(0%);
+  transition: all 500ms ease;
+}
+
+.menu-secondary-exit-active {
+  transform: translateX(110%);
+  transition: all 500ms ease;
 }
